<resources>
    <string name="app_name">Verdulería App</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_categorias">Categorías</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_facturacion">Facturación</string>
    <string name="menu_salir">Salir</string>
    <string name="productos_title">Productos</string>
    <string name="productos_search_hint">Buscar producto...</string>
    <string name="productos_add">Agregar</string>
    <string name="productos_edit">Editar</string>
    <string name="productos_delete">Eliminar</string>
    <string name="productos_exit">Salir</string>
    <string name="productos_form_title">Datos del Producto</string>
    <string name="productos_code">Código</string>
    <string name="productos_name">Nombre</string>
    <string name="productos_price">Precio</string>
    <string name="productos_save">Guardar</string>
    <string name="productos_cancel">Cancelar</string>
    <string name="clientes_title">Clientes</string>
    <string name="clientes_search_hint">Buscar cliente...</string>
    <string name="clientes_add">Agregar</string>
    <string name="clientes_edit">Editar</string>
    <string name="clientes_delete">Eliminar</string>
    <string name="clientes_exit">Salir</string>
    <string name="clientes_form_title">Datos del Cliente</string>
    <string name="clientes_id">Cédula</string>
    <string name="clientes_name">Nombre</string>
    <string name="clientes_phone">Teléfono</string>
    <string name="clientes_save">Guardar</string>
    <string name="clientes_cancel">Cancelar</string>
    <string name="factura_title">Facturas Guardadas</string>
    <string name="factura_form_title">Nueva Factura</string>
    <string name="factura_number_label">Número de Factura:</string>
    <string name="factura_date_label">Fecha:</string>
    <string name="factura_customer_label">Cliente:</string>
    <string name="factura_add_product_title">Agregar Producto</string>
    <string name="factura_quantity_hint">Cantidad</string>
    <string name="factura_add_product_button">Añadir Producto a la Factura</string>
    <string name="factura_detail_title">Detalle Actual</string>
    <string name="factura_add">Agregar</string>
    <string name="factura_edit">Editar</string>
    <string name="factura_delete">Eliminar</string>
    <string name="factura_exit">Salir</string>
    <string name="factura_save">Guardar</string>
    <string name="factura_cancel">Salir</string>
</resources>